--- a/PLPlayersAPI/wwwroot/style.css
+++ b/PLPlayersAPI/wwwroot/style.css
@@ -1,92 +1,94 @@
-﻿@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
+﻿@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700&display=swap');
 
 body {
-    font-family: 'Roboto', sans-serif;
-    line-height: 1.6;
-    background-color: #f4f4f4;
+    font-family: 'Poppins', sans-serif;
     margin: 0;
-    padding: 20px;
-    color: #333;
+    padding: 0;
+    background-color: #EFEFEF;
 }
 
-header {
-    text-align: center;
-    margin-bottom: 30px;
+nav {
+    background-color: #343131;
 }
 
-header h1 {
-    font-size: 2em;
-    margin-bottom: 10px;
+.github-logo {
+    height: 30px;
+    width: 80px;
+    margin-right: 15px;
 }
 
-header p {
-    font-size: 1.1em;
+.get-method, .post-method, .update-method, .delete-method{
+    font-weight: 600;
+    width: 90px;
+    border-radius: 5%;
 }
 
-section {
-    background-color: #fff;
-    padding: 20px;
-    margin-bottom: 30px;
-    border: 1px solid #888888;
-    border-radius: 5px;
-
+.post-method {
+    background-color: rgb(0, 162, 255);
 }
 
-section h2 {
-    font-size: 1.5em;
-    margin-bottom: 20px;
+.update-method {
+    background-color: #ec921c;
 }
 
-section h3 {
-    font-size: 1.2em;
-    margin-top: 20px;
-    margin-bottom: 10px;
+.border-post-method {
+    border: rgb(0, 162, 255) solid 1px;
 }
 
-table {
-    width: 50%;
-    border-collapse: collapse;
-    margin-bottom: 20px;
+.border-put-method {
+    border: #ec921c solid 1px;
 }
 
-table, th, td {
-    border: 1px solid #979797;
+.desc{
+    font-weight: 300;
+    margin-left: 1%;
 }
 
-th, td {
-    padding: 10px;
-    text-align: left;
+.endpoint .path {
+    color: #343131;
+    font-weight: 700;
 }
 
-th {
-    background-color: #f2f2f2;
+.endpoint:hover {
+    cursor: pointer;
 }
 
-pre {
-    background-color: #f2f2f2;
-    padding: 10px;
-    border-radius: 5px;
-    overflow-x: auto;
-    font-size: 0.9em;
+.endpoint svg {
+    margin-right: 1.5%;
 }
 
-pre span {
-    color: rgb(83, 219, 49);
+.status-code {
+    font-weight: 700;
 }
 
-pre a {
-    color: #0366d6;
-    text-decoration: none;
+.buttons .btn {
+    background-color: #343131;
+    color: #EFEFEF;
 }
 
-pre a:hover {
-    text-decoration: underline;
+.buttons .btn:hover, .btn:active, .btn::after {
+    background-color: #4d4a4a;
+    color: #EFEFEF;
 }
 
-.property {
-    color: #b92c0d; /* Property names color */
-}
 
-.value {
-    color: #2b2b2b; /* String values color */
+@media (max-width: 767px) {
+    .buttons {
+        flex-direction: column;
+    }
+
+    .buttons a {
+        margin: 1.5% 0;
+
+    }
+
+    .buttons a button {
+        width: 40%;
+        padding: 10px;
+        font-size: 1.1rem;
+    }
+
+    #players h4 {
+        margin-top: 10%;
+    }
 }
